add webserver playbook + clean up

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       context: ./docker/
       dockerfile: ./master.Dockerfile
     command: ["/usr/sbin/sshd","-D"]
-    working_dir: /var/workspace
+    working_dir: /var/workspace/ansible
     volumes:
       - ansible_fs:/var/ans
       - ./:/var/workspace
