add nginx role and multi site in webservers

--- a/ansible/playbooks/roles/webserver/defaults/main.yml
+++ b/ansible/playbooks/roles/webserver/defaults/main.yml
@@ -1,4 +1,6 @@
 ---
 # defaults file for ./roles/webserver
 http_port: 80
-domain: webserver.dev.vagrant.local
+domains:
+      - webapp1.dev.docker.local
+      - webapp2.dev.docker.local
