--- a/ansible/playbooks/roles/webserver/templates/vhost.conf
+++ b/ansible/playbooks/roles/webserver/templates/vhost.conf
@@ -1,6 +1,6 @@
 <VirtualHost *:{{ http_port }}>
-    ServerAdmin webmaster@{{ domain }}
-    ServerName {{ domain }}
-    ServerAlias www.{{ domain }}
-    DocumentRoot /var/www/{{ domain }}/public_html
-</VirtualHost> 
+    ServerAdmin webmaster@{{ item }}
+    ServerName {{ item }}
+    ServerAlias www.{{ item }}
+    DocumentRoot /var/www/{{ item }}/public_html
+</VirtualHost>
